<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safe Button</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BlueToothDeviceNotconnected">BlueTooth Device not connected</string>
    <string name="defualt">not alarmed</string>
    <string name="alarm">alarmed</string>
    <string name="ConnectBlueToothDevice">Connect BlueTooth Device</string>
    <string name="register">Register</string>
    <string name="logIn">Log In</string>
    <string name="username">your name</string>
    <string name="password">password</string>
    <string name="ICEContactPhoneNumber">ICE Contact Phone Number</string>
    <!-- unused -->
    <string name="ChooseContacts">Choose Contacts</string>
    <string name="IceContact">In Case of Emergency contact</string>
    
    <!-- from metawear sample app -->
    <string name="label_mac_address">MAC Address</string>
    <string name="label_accelerometer">Accelerometer</string>
    <string name="label_led_state">LED State</string>
    <string name="label_led_color">LED Color</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_switch">Switch</string>
    <string name="label_serial_number">Serial Number</string>
    <string name="label_manufacturer">Manufacturer</string>
    <string name="label_firmware_version">Firmware Version</string>
    <string name="label_hardware_version">Hardware Version</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_accelerometer_data">Accelerometer Data</string>
    <string name="label_freefall_status">In Free Fall</string>
    <string name="label_led_red">LED Red Value</string>
    <string name="label_led_green">LED Green Value</string>
    <string name="label_led_blue">LED Blue Value</string>
    <string name="label_commands">Commands</string>
    
    <!-- from bluethooth exmple -->
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="YourPhoneNumber">Your phone number</string>
    <string name="ICEContactName">ICE Contact Name</string>
    

</resources>
