<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.safeButtton.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/ConnectDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConnectBlueToothDevice" />

    <Button
        android:id="@+id/cmdRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Button
        android:id="@+id/cmdlogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn" />

</LinearLayout>